<resources>
    <string name="app_name">Fitimer</string>
    <string name="timer_place_holder">00</string>
    <string name="fit_timer_title">Fit Timer Setup</string>
    <string name="fit_timer_start">Start</string>
    <string name="fit_timer_work">Work</string>
    <string name="fit_timer_rest">Rest</string>
    <string name="fit_timer_digit_delimiter">:</string>
    <string name="fit_timer_place_holder_00">00</string>
    <string name="fit_timer_place_holder_45">45</string>
    <string name="fit_timer_place_holder_15">15</string>
    <string name="timer_menu_item">Timer</string>
    <string name="fit_timer_menu_item">Fit Timer</string>
</resources>
