<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fit_timer_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">
    <RelativeLayout
        android:id="@+id/fit_timer_view_setup"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/fit_timer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="220dp"
                android:layout_marginRight="20dp"
                android:layout_gravity="right">

                <TextView
                    android:id="@+id/workout_text_view_setup_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segment_7"
                    android:text="@string/fit_timer_place_holder_00"
                    android:textColor="@color/colorPrimary"
                    android:textSize="120sp" />

                <TextView
                    android:id="@+id/workout_text_view_delimiter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/digital_7"
                    android:text="@string/fit_timer_digit_delimiter"
                    android:layout_toEndOf="@id/workout_text_view_setup_min"
                    android:textColor="@color/colorPrimary"
                    android:textSize="120sp" />

                <TextView
                    android:id="@+id/workout_text_view_setup_sec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segment_7"
                    android:text="@string/fit_timer_place_holder_45"
                    android:layout_toEndOf="@id/workout_text_view_delimiter"
                    android:textColor="@color/colorPrimary"
                    android:textSize="120sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:layout_marginRight="20dp"
                android:layout_gravity="right">
                <TextView
                    android:id="@+id/rest_text_view_setup_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segment_7"
                    android:text="@string/fit_timer_place_holder_00"
                    android:textColor="@color/colorPrimary"
                    android:textSize="120sp" />

                <TextView
                    android:id="@+id/rest_text_view_delimiter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/digital_7"
                    android:text="@string/fit_timer_digit_delimiter"
                    android:layout_toEndOf="@id/rest_text_view_setup_min"
                    android:textColor="@color/colorPrimary"
                    android:textSize="120sp" />

                <TextView
                    android:id="@+id/rest_text_view_setup_sec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segment_7"
                    android:text="@string/fit_timer_place_holder_15"
                    android:layout_toEndOf="@id/rest_text_view_delimiter"
                    android:textColor="@color/colorPrimary"
                    android:textSize="120sp"/>
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="20dp"
            android:layout_alignParentTop="true"
            android:fontFamily="@font/digital_7"
            android:text="@string/fit_timer_title"
            android:textColor="@color/colorAccent"
            android:textSize="50sp"/>

        <TextView
            android:id="@+id/work_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:layout_marginLeft="20dp"
            android:fontFamily="@font/digital_7"
            android:text="@string/fit_timer_work"
            android:textColor="@color/colorAccent"
            android:textSize="50sp"/>

        <TextView
            android:id="@+id/rest_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="390dp"
            android:layout_marginLeft="20dp"
            android:fontFamily="@font/digital_7"
            android:text="@string/fit_timer_rest"
            android:textColor="@color/colorAccent"
            android:textSize="50sp"/>

        <TextView
            android:id="@+id/start_button_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:fontFamily="@font/digital_7"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:text="@string/fit_timer_start"
            android:textColor="@color/colorAccent"
            android:textSize="80sp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fit_timer_view_running"
        android:orientation="vertical"
        android:foreground="@drawable/fullscreen_ripple"
        android:weightSum="2"
        android:keepScreenOn="true"
        android:visibility="invisible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/minute_text_view_running"
            android:text="@string/timer_place_holder"
            app:autoSizeMaxTextSize="320sp"
            app:autoSizeMinTextSize="5sp"
            android:fontFamily="@font/segment_7"
            app:autoSizeTextType="uniform"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_marginBottom="-100dp"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/second_text_view_running"
            android:text="@string/timer_place_holder"
            app:autoSizeMaxTextSize="320sp"
            app:autoSizeMinTextSize="5sp"
            android:fontFamily="@font/segment_7"
            app:autoSizeTextType="uniform"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_marginBottom="-30dp"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>

    <TextView
        android:id="@+id/minute_shuttle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segment_7"
        android:gravity="center"
        android:text="@string/fit_timer_place_holder_45"
        android:textColor="@color/colorPrimary"
        app:autoSizeMaxTextSize="320sp"
        app:autoSizeMinTextSize="160sp"
        app:autoSizeTextType="uniform"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/second_shuttle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segment_7"
        android:gravity="center"
        android:text="@string/fit_timer_place_holder_45"
        android:textColor="@color/colorPrimary"
        app:autoSizeMaxTextSize="320sp"
        app:autoSizeMinTextSize="160sp"
        app:autoSizeTextType="uniform"
        android:visibility="gone"/>
</FrameLayout>